--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "nx vite:build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "nx vite:preview"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -15,17 +15,24 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@nx/eslint": "20.1.3",
+    "@nx/vite": "20.1.3",
+    "@nx/web": "20.1.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/ui": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "nx": "20.1.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10"
-  }
+    "vite": "^5.4.10",
+    "vitest": "^1.3.1"
+  },
+  "nx": {}
 }
